--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -96,7 +96,7 @@ parameters:
 - name: custom_ort_package_versioned_name
   displayName: 'Versioned name of ort nuget package. Must follow Microsoft.ML.OnnxRuntime.*.version.nupkg. Keep None to disable building'
   type: string
-  default: 'None'
+  default: 'Microsoft.ML.OnnxRuntime.Foundry.1.23.0-dev-20250516-0447-261c2b7a80.nupkg'
 
 resources:
   repositories:
@@ -184,7 +184,7 @@ extends:
           cuda_version: ${{ parameters.cuda_version }}
           SpecificArtifact: false
 
-    - ${{ if and(and(and(ne(parameters.custom_ort_package_versioned_name, 'Microsoft.ML.OnnxRuntime.Foundry.1.23.0-dev-20250516-0447-261c2b7a80.nupkg'), eq(parameters.enable_win_arm64, true)), eq(parameters.enable_win_cuda, true)), eq(parameters.enable_macos_cpu, true)) }}:
+    - ${{ if and(and(and(ne(parameters.custom_ort_package_versioned_name, 'None'), eq(parameters.enable_win_arm64, true)), eq(parameters.enable_win_cuda, true)), eq(parameters.enable_macos_cpu, true)) }}:
       - template: stages/custom-nuget-packaging-stage.yml
         parameters:
           custom_ort_package_versioned_name: ${{ parameters.custom_ort_package_versioned_name }}
