--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -82,6 +82,9 @@ extends:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
       os: windows  # OS of the image. This value cannot be a variable. Allowed values: windows, linux, macOS
     sdl:
+      sourceRepositoriesToScan:
+        exclude:
+        - repository: manylinux
       policheck:
         enabled: true
         break: true # always break the build on policheck issues. You can disable it by setting to 'false'
