--- a/.pipelines/stages/jobs/py-publishing-job.yml
+++ b/.pipelines/stages/jobs/py-publishing-job.yml
@@ -1,4 +1,12 @@
 parameters:
+- name: SpecificArtifact
+  displayName: Use Specific Artifact
+  type: boolean
+  default: false
+- name: BuildId
+  displayName: Specific Artifact's BuildId
+  type: string
+  default: '0'
 - name: arch
   type: string
 - name: ep
@@ -15,30 +23,16 @@ parameters:
   - 'linux'
   - 'win'
   - 'osx'
-- name: build_config
-  type: string
-  default: 'release'
-
 
 jobs:
 - job: python_${{ parameters.os }}_${{ parameters.ep }}${{ parameters.cuda_display_version }}_${{ parameters.arch }}_packaging
   ${{ if eq(parameters.os, 'linux') }}:
     pool:
-      ${{ if eq(parameters.arch, 'x64') }}:
-        name: 'onnxruntime-Ubuntu2204-AMD-CPU'
-      ${{ elseif eq(parameters.arch, 'arm64') }}:
-        name: 'onnxruntime-genai-Ubuntu2004-ARM-CPU'
-      ${{ else }}:
-        name: 'onnxruntime-Ubuntu2204-AMD-CPU'
+      name: 'onnxruntime-Ubuntu2204-AMD-CPU'
       os: linux
   ${{ if eq(parameters.os, 'win') }}:
     pool:
-      ${{ if eq(parameters.arch, 'x64') }}:
-        name: 'onnxruntime-Win-CPU-2022'
-      ${{ elseif eq(parameters.arch, 'arm64') }}:
-        name: 'onnxruntime-genai-windows-vs-2022-arm64'
-      ${{ else }}:
-        name: 'onnxruntime-Win-CPU-2022'
+      name: 'onnxruntime-Win-CPU-2022'
       os: windows
   ${{ if eq(parameters.os, 'osx') }}:
     pool:
@@ -78,16 +72,14 @@ jobs:
   - name: skipComponentGovernanceDetection
     ${{ if eq(parameters.os, 'linux') }}:
       value: true
-    ${{ if eq(parameters.os, 'osx') }}:
-      value: true
     ${{ if eq(parameters.os, 'win') }}:
       value: false
   - name: arch
     value: ${{ parameters.arch }}
   - name: artifactName
     value: 'onnxruntime-genai-${{ parameters.os }}-${{ parameters.ep }}-${{ parameters.arch }}'
-  - name: build_config
-    value: ${{ parameters.build_config }}
+  - name: buildConfig
+    value: 'Release'
   - name: buildDir
     value: 'build/${{ parameters.ep }}'
   - name: cuda_version
@@ -97,10 +89,22 @@ jobs:
   - name: os
     value: ${{ parameters.os }}
 
-  - name: feed_name
-    value: '7982ae20-ed19-4a35-a362-a96ac99897b7'
+  - name: pip_package_name
+    ${{ if eq(parameters.ep, 'cpu') }}:
+      value: 'onnxruntime_genai'
+    ${{ elseif eq(parameters.ep, 'cuda') }}:
+      value: 'onnxruntime_genai_cuda'
+    ${{ elseif eq(parameters.ep, 'directml')}}:
+      value: 'onnxruntime_genai_directml'
+    ${{ else }}:
+      value: 'onnxruntime_genai'
 
   steps:
+  - checkout: self
+    clean: true
+    path: onnxruntime-genai
+    submodules: recursive
+
   - script: |
       MKDIR $(Agent.ToolsDirectory)\Python\3.12.3\arm64
       XCOPY /s /y /h /e /c /q "C:\Python\Python312\*.*" $(Agent.ToolsDirectory)\Python\3.12.3\arm64\
@@ -110,7 +114,7 @@ jobs:
       DIR $(Agent.ToolsDirectory)\Python\3.12.3\arm64
       DIR "C:\Python"
     displayName: Copy python 3.12.3 version to agent tools directory
-    condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['PyDotVer'], '3.12'))
+    condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['py_dot_ver'], '3.12'))
 
   - script: |
       MKDIR $(Agent.ToolsDirectory)\Python\3.11.0\arm64
@@ -121,47 +125,20 @@ jobs:
       DIR $(Agent.ToolsDirectory)\Python\3.11.0\arm64
       DIR "C:\Python"
     displayName: Copy python 3.11.0 version to agent tools directory
-    condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['PyDotVer'], '3.11'))
+    condition: and(eq(variables['arch'], 'arm64'), eq(variables['os'], 'win'), eq(variables['py_dot_ver'], '3.11'))
 
   - task: UsePythonVersion@0
     inputs:
-      versionSpec: $(PyDotVer)
+      versionSpec: $(py_dot_ver)
       addToPath: true
       architecture: $(arch)
-  - task: PythonScript@0
-    inputs:
-      scriptSource: inline
-      script: |
-        import sys
-        import subprocess
-        subprocess.call(['pip', 'install', '-q', 'setuptools', 'wheel', 'build', 'packaging', 'twine'])
-      workingDirectory: '$(Build.BinariesDirectory)'
-    displayName: 'Install python modules'
 
-  - ${{ if eq(parameters.os, 'linux') }}:
-    - template: steps/capi-linux-step.yml
-      parameters:
-        target: 'python'
-        arch: ${{ parameters.arch }}
-        ep: ${{ parameters.ep }}
-        build_config: ${{ parameters.build_config }}
-
-  # Windows job needs to set the python version and install the required packages
-  - ${{ if eq(parameters.os, 'win') }}:
-    - template: steps/capi-win-step.yml
-      parameters:
-        target: 'python'
-        arch: ${{ parameters.arch }}
-        ep: ${{ parameters.ep }}
-        build_config: ${{ parameters.build_config }}
-
-  - ${{ if eq(parameters.os, 'osx') }}:
-    - template: steps/capi-macos-step.yml
-      parameters:
-        target: 'python'
-        arch: ${{ parameters.arch }}
-        ep: ${{ parameters.ep }}
-        build_config: ${{ parameters.build_config }}
+  - template: steps/utils/flex-download-pipeline-artifact.yml
+    parameters:
+      StepName: 'Download Python Wheel Artifacts'
+      ArtifactName: $(ArtifactName)-wheel
+      TargetPath: '$(Build.BinariesDirectory)/wheel'
+      SpecificArtifact: false
+      BuildId: ${{ parameters.BuildId }}
 
   - template: steps/compliant-and-cleanup-step.yml
-
