--- a/.pipelines/stages/py-publishing-stage.yml
+++ b/.pipelines/stages/py-publishing-stage.yml
@@ -26,9 +26,6 @@ parameters:
 - name: cuda_versions
   type: string
   default: '12.2'
-- name: build_config
-  type: string
-  default: 'release'
 
 stages:
 - stage: python_publishing
@@ -40,7 +37,7 @@ stages:
         ep: 'cpu'
         os: 'win'
         SpecificArtifact: ${{ parameters.SpecificArtifact }}
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if eq(parameters.enable_win_arm64_cpu, true) }}:
     - template: jobs/py-publishing-job.yml
@@ -48,7 +45,7 @@ stages:
         arch: 'arm64'
         ep: 'cpu'
         os: 'win'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if eq(parameters.enable_win_dml, true) }}:
     - template: jobs/py-publishing-job.yml
@@ -56,7 +53,7 @@ stages:
         arch: 'x64'
         ep: 'directml'
         os: 'win'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if and(eq(parameters.enable_win_cuda, true), contains(parameters.cuda_versions, '11.8')) }}:
     - template: jobs/py-publishing-job.yml
@@ -66,7 +63,7 @@ stages:
         cuda_display_version: '118'
         ep: 'cuda'
         os: 'win'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if and(eq(parameters.enable_win_cuda, true), contains(parameters.cuda_versions, '12.2')) }}:
     - template: jobs/py-publishing-job.yml
@@ -76,7 +73,7 @@ stages:
         cuda_display_version: '122'
         ep: 'cuda'
         os: 'win'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if eq(parameters.enable_linux_cpu, true) }}:
     - template: jobs/py-publishing-job.yml
@@ -84,7 +81,7 @@ stages:
         arch: 'x64'
         ep: 'cpu'
         os: 'linux'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if and(eq(parameters.enable_linux_cuda, true), contains(parameters.cuda_versions, '11.8')) }}:
     - template: jobs/py-publishing-job.yml
@@ -103,7 +100,7 @@ stages:
         cuda_display_version: '122'
         ep: 'cuda'
         os: 'linux'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
 
   - ${{ if eq(parameters.enable_linux_rocm, true) }}:
     - template: jobs/py-publishing-job.yml
@@ -111,17 +108,17 @@ stages:
         arch: 'x64'
         ep: 'rocm'
         os: 'linux'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
   - ${{ if eq(parameters.enable_macos_cpu, true) }}:
     - template: jobs/py-publishing-job.yml
       parameters:
         arch: 'x64'
         ep: 'cpu'
         os: 'osx'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
     - template: jobs/py-publishing-job.yml
       parameters:
         arch: 'arm64'
         ep: 'cpu'
         os: 'osx'
-        build_config: ${{ parameters.build_config }}
+        BuildId: ${{ parameters.BuildId }}
