publish wheels by default

--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -4,10 +4,10 @@ parameters:
   type: boolean
   default: false
 
-- name: enable_nightly_publish
-  displayName: Whether Wheels should be published to nightly feed
+- name: enable_publish_wheels
+  displayName: Whether Wheels should be published to the nightly feed
   type: boolean
-  default: false
+  default: true
 
 - name: enable_win_cpu
   displayName: 'Whether Windows CPU package is built.'
@@ -114,7 +114,7 @@ extends:
           enable_macos_cpu: ${{ parameters.enable_macos_cpu }}
           cuda_versions: ${{ parameters.cuda_versions }}
           SpecificArtifact: false
-    - ${{ if eq(parameters.enable_nightly_publish, true) }}:
+    - ${{ if eq(parameters.enable_publish_wheels, true) }}:
       - template: stages/py-publishing-stage.yml
         parameters:
           enable_linux_cpu: ${{ parameters.enable_linux_cpu }}
