--- a/.pipelines/stages/jobs/py-publishing-job.yml
+++ b/.pipelines/stages/jobs/py-publishing-job.yml
@@ -28,14 +28,24 @@ parameters:
   default: 'ORT-Nightly'
 
 jobs:
-- job: python_${{ parameters.os }}_${{ parameters.ep }}${{ parameters.cuda_display_version }}_${{ parameters.arch }}_packaging
+- job: python_${{ parameters.os }}_${{ parameters.ep }}${{ parameters.cuda_display_version }}_${{ parameters.arch }}_publishing
   ${{ if eq(parameters.os, 'linux') }}:
     pool:
-      name: 'onnxruntime-Ubuntu2204-AMD-CPU'
+      ${{ if eq(parameters.arch, 'x64') }}:
+        name: 'onnxruntime-Ubuntu2204-AMD-CPU'
+      ${{ elseif eq(parameters.arch, 'arm64') }}:
+        name: 'onnxruntime-genai-Ubuntu2004-ARM-CPU'
+      ${{ else }}:
+        name: 'onnxruntime-Ubuntu2204-AMD-CPU'
       os: linux
   ${{ if eq(parameters.os, 'win') }}:
     pool:
-      name: 'onnxruntime-Win-CPU-2022'
+      ${{ if eq(parameters.arch, 'x64') }}:
+        name: 'onnxruntime-Win-CPU-2022'
+      ${{ elseif eq(parameters.arch, 'arm64') }}:
+        name: 'onnxruntime-genai-windows-vs-2022-arm64'
+      ${{ else }}:
+        name: 'onnxruntime-Win-CPU-2022'
       os: windows
   ${{ if eq(parameters.os, 'osx') }}:
     pool:
