--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -148,7 +148,7 @@ jobs:
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
             -e HF_TOKEN=$HF_TOKEN \
             -w /ort_genai_src onnxruntimecudabuildx64 bash -c " \
-              apt-get update && apt-get install -y libreadline-dev && ${{ env.PYTHON_EXECUTABLE }} -m pip install gnureadline && \
+              tdnf update && tdnf install -y libreadline-dev && ${{ env.PYTHON_EXECUTABLE }} -m pip install gnureadline && \
               ${{ env.PYTHON_EXECUTABLE }} -m pip install -r test/python/requirements.txt --user && \
               ${{ env.PYTHON_EXECUTABLE }} -m pip install -r test/python/cuda/torch/requirements.txt --user && \
               ${{ env.PYTHON_EXECUTABLE }} -m pip install -r test/python/cuda/ort/requirements.txt --user && \
