Address pr review comments

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -4,9 +4,9 @@ project(ortgenaiapp)
 set(CMAKE_CXX_STANDARD 20)
 
 option(USE_CXX "Invoke the C++ example" ON)
-option(MODEL_CHAT "Build the Phi example" OFF)
-option(MODEL_QA "Build the model Q&A example without multi-turn prompting" OFF)
-option(PHI3V "Build the Phi-3 vision example" OFF)
+option(MODEL_CHAT "Build the Model Chat example" OFF)
+option(MODEL_QA "Build the Model Q&A example without multi-turn prompting" OFF)
+option(MODEL_VISION "Build the Model Vision example" OFF)
 option(PHI4-MM "Build the Phi-4 mm example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
 
@@ -66,9 +66,9 @@ if(MODEL_QA)
   prepare_executable(model_qa)
 endif()
 
-if(PHI3V)
-  add_executable(phi3v ${EXAMPLES_SOURCE_DIR}/phi3v.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
-  prepare_executable(phi3v)
+if(MODEL_VISION)
+  add_executable(model_vision ${EXAMPLES_SOURCE_DIR}/model_vision.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
+  prepare_executable(model_vision)
 endif()
 
 if(PHI4-MM)
