sign all genai dlls, in both onnxunrime-genai and python targets

--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -104,12 +104,12 @@ steps:
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 
-- ${{ if eq(parameters.target, 'onnxruntime-genai') }}:
+- ${{ if or(eq(parameters.target, 'onnxruntime-genai'), eq(parameters.target, 'python')) }}:
   - template: compliant/win-esrp-dll-step.yml
     parameters:
       FolderPath: '$(Build.Repository.LocalPath)\$(buildDir)'
       DisplayName: 'ESRP - Sign C++ dlls'
-      Pattern: '*genai.dll'
+      Pattern: '*genai*.dll'
 
   - task: BinSkim@4
     displayName: 'Run BinSkim'
