--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -99,7 +99,7 @@ steps:
     }
     python -m pip install requests
     python build.py --use_guidance --parallel $cuda_home $use_dml $package_c $skip_wheel --config=$build_config --build_dir='$(Build.Repository.LocalPath)\$(buildDir)' --skip_tests
-    Rename-Item -Path '$(Build.Repository.LocalPath)\$(buildDir)\$build_config' -NewName '$(os)-$(arch)' -Force
+    Rename-Item -Path '$(Build.Repository.LocalPath)\$(buildDir)\$(build_config)' -NewName '$(os)-$(arch)' -Force
   displayName: 'Build C API and package / wheel'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
