--- a/.github/workflows/win-cpu-arm64-build.yml
+++ b/.github/workflows/win-cpu-arm64-build.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           nuget-version: '5.x'
 
+      - name: Set up Python 3.12 for ARM64
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          architecture: 'arm64'
+          cache: 'pip'
+
       - name: Setup Java 21
         uses: actions/setup-java@v4
         with:
