--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -50,10 +50,17 @@ steps:
   condition: eq(variables['ep'], 'cuda')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
+- task: Docker@2
+  displayName: 'Login to ACR'
+  inputs:
+    azureSubscription: AIInfraBuildOnnxRuntimeOSS
+    containerRegistry: 'onnxruntimebuildcache'
+    command: 'login'
+
 - bash: |
     set -e -x
     # az login --identity --object-id c90de106-42dc-405a-8bad-2438f4279448
-    az acr login --name onnxruntimebuildcache --subscription 00c06639-6ee4-454e-8058-8d8b1703bd87
+    # az acr login --name onnxruntimebuildcache --subscription 00c06639-6ee4-454e-8058-8d8b1703bd87
     python3 -m pip install requests
     python3 tools/ci_build/get_docker_image.py --dockerfile tools/ci_build/github/linux/docker/manylinux/Dockerfile.manylinux2_28_$(ep) \
       --context tools/ci_build/github/linux/docker/manylinux \
