--- a/.pipelines/stages/jobs/steps/nuget-validation-step.yml
+++ b/.pipelines/stages/jobs/steps/nuget-validation-step.yml
@@ -13,6 +13,7 @@ parameters:
 steps:
   - task: Docker@2
     inputs:
+      azureSubscription: AIInfraBuildOnnxRuntimeOSS
       containerRegistry: onnxruntimebuildcache
       command: "login"
       addPipelineData: false
@@ -58,8 +59,6 @@ steps:
       NUGET_PLUGIN_REQUEST_TIMEOUT_IN_SECONDS: 180
   - bash: |
       set -e -x
-      az login --identity --object-id c90de106-42dc-405a-8bad-2438f4279448
-      az acr login --name onnxruntimebuildcache --subscription 00c06639-6ee4-454e-8058-8d8b1703bd87
       docker pull $(cuda_docker_image)
 
       docker run \
