--- a/.pipelines/stages/jobs/steps/python-validation-step.yml
+++ b/.pipelines/stages/jobs/steps/python-validation-step.yml
@@ -11,6 +11,7 @@ parameters:
 steps:
   - task: Docker@2
     inputs:
+      azureSubscription: AIInfraBuildOnnxRuntimeOSS
       containerRegistry: onnxruntimebuildcache
       command: "login"
       addPipelineData: false
@@ -56,8 +57,6 @@ steps:
 
   - bash: |
       set -e -x
-      az login --identity --object-id c90de106-42dc-405a-8bad-2438f4279448
-      az acr login --name onnxruntimebuildcache --subscription 00c06639-6ee4-454e-8058-8d8b1703bd87
       docker pull $(cuda_docker_image)
       python_exe=/opt/python/cp310-cp310/bin/python3.10
 
