--- a/.pipelines/stages/jobs/steps/utils/set-nightly-build-option-variable.yml
+++ b/.pipelines/stages/jobs/steps/utils/set-nightly-build-option-variable.yml
@@ -8,9 +8,23 @@ steps:
     scriptSource: inline
     script: |
       import os
+      from pathlib import Path
+      from datetime import datetime
 
       name = "NightlyBuildOption"
       value = "--nightly_build" if os.environ.get("NIGHTLY_BUILD") == "1" else ""
+      if os.environ.get("runID") is not None:
+        print("Found runID: {}".format(os.environ.get("runID")))
+
+      # Add date to the version if it is a dev version
+      file_path = Path("VERSION_INFO")
+      with file_path.open("r", encoding="utf-8") as f:
+        curr_version = f.readline().rstrip("\n")
+      if curr_version.endswith("-dev"):
+        today_yyyymmdd = datetime.now().strftime("%Y%m%d")
+        curr_version += str(today_yyyymmdd)
+        with open(file_path, "w", encoding="utf-8") as f:
+          f.write(curr_version)
 
       print("Setting variable: {} = '{}'".format(name, value))
       print("##vso[task.setvariable variable={}]{}".format(name, value))
@@ -22,9 +36,23 @@ steps:
     scriptSource: inline
     script: |
       import os
+      from pathlib import Path
+      from datetime import datetime
 
       name = "NightlyBuildOption"
       value = "--nightly_build" if os.environ.get("NIGHTLY_BUILD") == "1" else ""
+      if os.environ.get("runID") is not None:
+        print("Found runID: {}".format(os.environ.get("runID")))
+
+      # Add date to the version if it is a dev version
+      file_path = Path("VERSION_INFO")
+      with file_path.open("r", encoding="utf-8") as f:
+        curr_version = f.readline().rstrip("\n")
+      if curr_version.endswith("-dev"):
+        today_yyyymmdd = datetime.now().strftime("%Y%m%d")
+        curr_version += str(today_yyyymmdd)
+        with open(file_path, "w", encoding="utf-8") as f:
+          f.write(curr_version)
 
       print("Setting variable: {} = '{}'".format(name, value))
       print("##vso[task.setvariable variable={}]{}".format(name, value))
