--- a/.pipelines/stages/jobs/steps/utils/download-huggingface-model.yml
+++ b/.pipelines/stages/jobs/steps/utils/download-huggingface-model.yml
@@ -16,7 +16,7 @@ steps:
   - ${{ if or(eq(parameters.os, 'linux'), eq(parameters.os, 'osx')) }}:
     - bash: |
         python -m pip install "huggingface_hub[cli]"
-        hf auth login --token $HF_TOKEN
+        hf auth login --token $HF_TOKEN --add-to-git-credential
         hf download ${{ parameters.HuggingFaceRepo }} --include ${{ parameters.RepoFolder }}/* --local-dir ${{ parameters.LocalFolder }}
       displayName: Download ${{ parameters.HuggingFaceRepo }} from HuggingFace
       workingDirectory: ${{ parameters.WorkingDirectory }}
@@ -27,7 +27,7 @@ steps:
   - ${{ if eq(parameters.os, 'win') }}:
     - powershell: |
         python -m pip install "huggingface_hub[cli]"
-        hf auth login --token $env:HF_TOKEN
+        hf auth login --token $env:HF_TOKEN --add-to-git-credential
         # Use maximum path length for Windows... otherwises hits the path character limit
         hf download ${{ parameters.HuggingFaceRepo }} --include ${{ parameters.RepoFolder }}/* --local-dir "\\?\${{ parameters.WorkingDirectory }}\\${{ parameters.LocalFolder }}"
       displayName: Download ${{ parameters.HuggingFaceRepo }} from HuggingFace
