reorder compiler options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,16 +36,6 @@ if(MSVC)
   # Enable Control Flow Guard on compiler and linker to pass BinSkim checks
   add_compile_options($<$<COMPILE_LANGUAGE:C,CXX>:/guard:cf>)
   add_link_options(/guard:cf /DYNAMICBASE)
-
-  # Set updated value for __cplusplus macro instead of 199711L
-  add_compile_options($<$<COMPILE_LANGUAGE:CXX>:/Zc:__cplusplus>)
-
-  add_compile_options(
-      "$<$<COMPILE_LANGUAGE:C,CXX>:/w15038>"
-      "$<$<COMPILE_LANGUAGE:C,CXX>:/wd4100>"
-      "$<$<COMPILE_LANGUAGE:C,CXX>:/W4>"
-      "$<$<COMPILE_LANGUAGE:C,CXX>:/WX>"
-  )
 endif()
 
 include(cmake/ortlib.cmake)
@@ -64,6 +54,30 @@ include(cmake/cxx_standard.cmake)
 add_compile_definitions(BUILDING_ORT_GENAI_C)
 
 add_compile_definitions(USE_GUIDANCE=$<BOOL:${USE_GUIDANCE}>)
+
+if(MSVC)
+  # Use updated value for __cplusplus macro (e.g. 201703L for C++17) instead of default 199711L
+  # Required by some libraries/tools that check __cplusplus for feature support
+  add_compile_options($<$<COMPILE_LANGUAGE:CXX>:/Zc:__cplusplus>)
+
+  add_compile_options(
+      # Suppress warning C5038: data member will be initialized after another
+      # Common when member initializer list is written out-of-order vs. declaration
+      "$<$<COMPILE_LANGUAGE:C,CXX>:/w15038>"
+
+      # Suppress warning C4100: unreferenced formal parameter
+      # Often appears in template or virtual function overrides where a param is unused
+      "$<$<COMPILE_LANGUAGE:C,CXX>:/wd4100>"
+
+      # Enable warning level 4 (more aggressive than default /W3)
+      # Captures more potential bugs or code smells
+      "$<$<COMPILE_LANGUAGE:C,CXX>:/W4>"
+
+      # Treat all warnings as errors (fail build on any warning)
+      # Combine carefully with /W4 — suppress any known false positives
+      "$<$<COMPILE_LANGUAGE:C,CXX>:/WX>"
+  )
+endif()
 
 # Suggested by https://gitlab.kitware.com/cmake/cmake/-/issues/20132
 # MacCatalyst is not well supported in CMake
